--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,7 +27,7 @@ layerrule = ignorezero, waybar
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,2550x1200,auto,1.25
+monitor=,auto,auto,1.25
 
 
 ###################
