--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -31,7 +31,7 @@ monitor=,auto,auto,1.25
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = tilix
+$terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
 
@@ -40,12 +40,7 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 #################
 
-# Autostart necessary processes (like notifications daemons, status bars, etc.)
-# Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
 exec-once = waybar & swww-daemon
 
 #############################
