--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -232,8 +232,9 @@ bind = ctrl_alt, up, movewindow, u
 bind = ctrl_alt, down, movewindow, d
 bind = ALT, Tab, cyclenext,
 bind = ALT, Tab, bringactivetotop,
-bind =SUPER_SHIFT, S, exec, grim -g "$(slurp -d)" | wl-copy
-bind = SUPER_CTRL, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+bind =SUPER_SHIFT, S, exec, grim -g "$(slurp)" - | tee ~/Pictures/$(date +'%Y-%m-%d_%H-%M-%S').png | wl-copy
+bind = $mainMod SHIFT, V, exec, cliphist list | wofi -dmenu | cliphist decode | wl-copy 
+
 
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
