--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -40,8 +40,10 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 #################
 
-
 exec-once = waybar & swww-daemon
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
