--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,7 +32,7 @@ monitor=,auto,auto,1.25
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = nemo
 $menu = wofi --show drun
 
 
