--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -248,6 +248,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, W, exec, waypaper
 
 # focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
