--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -150,8 +150,8 @@ animations {
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
     animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 2, almostLinear, slide
+    animation = workspacesOut, 1, 2.13, almostLinear, slide
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
