--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -138,6 +138,7 @@ animations {
 
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
+    animation = borderangle, 1, 8.6, almostLinear, once
     animation = windows, 1, 4.79, easeOutQuint
     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
     animation = windowsOut, 1, 1.49, linear, popin 87%
