updated hyprland config but there is some mine personal settings so.....

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,8 +21,11 @@ layerrule = ignorezero, waybar
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,auto,auto,1.25
-
+monitor=DP-2,2560x1440@144,1344x0,1.25
+monitor=DP-3,1680x1000@59.883,0x200,1.25
+xwayland {
+  force_zero_scaling = true
+}
 
 ###################
 ### MY PROGRAMS ###
@@ -40,7 +43,7 @@ $menu = wofi --show drun
 ### AUTOSTART ###
 #################
 
-exec-once = waybar & swww-daemon
+exec-once = waybar & hyprpaper
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 
@@ -197,8 +200,8 @@ input {
     kb_rules =
 
     follow_mouse = 1
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+	force_no_accel = true
+    sensitivity = 0.15 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = false
